src/objects/Booth_Map__c.object
<CustomObject>
    <description>This table is used for both Booth and Kiosk</description>
    <fields>
        <fullName>BLN_Room__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BLN Room</label>
        <referenceTo>BLN_Room__c</referenceTo>
        <relationshipLabel>BLN Booth Maps</relationshipLabel>
        <relationshipName>BLN_Booth_Maps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Booth_Area__c</fullName>
        <label>Booth Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booth_Number__c</fullName>
        <label>Booth Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booth_Size__c</fullName>
        <label>Booth Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booth_Type__c</fullName>
        <label>Booth Type</label>
        <picklist>
            <picklistValues>
                <fullName>Booth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kiosk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Kiosk_Description__c</fullName>
        <label>Kiosk Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Kiosk_Module_Type__c</fullName>
        <label>Kiosk Module Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Kiosk_Modules__c</fullName>
        <label>Kiosk Modules</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parameters__c</fullName>
        <label>Parameters</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ticket_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ticket id</label>
        <referenceTo>Ticket__c</referenceTo>
        <relationshipName>booth_maps</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>BLN Booth Map</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Booth Kiosk Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BLN Booth Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>